--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sample Node.js app using Express 4",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "casperjs app.js"
   },
   "dependencies": {
     "ejs": "^2.3.1",
